# cdc-places-mcp-server

./: .gitignore  LICENSE  Procfile  README.md  main.py  manifest.yaml  places.py  pyproject.toml  requirements.txt  server.json  utils.py
.agents/skills/mcp-builder/: skill.md
.claude/skills/mcp-builder/reference/: python_mcp_server.md
eval/: questions.csv  run_eval.py
eval/mcp-data-check/: questions.csv  questions_test.csv
eval/mcp-data-check/results/: comparison_20260429_145817.json  comparison_20260429_151037.json
eval/phoenix/: agent.py  create_dataset.py  datasets.yaml  run_experiment.py
eval/phoenix/datasets/places-comparison-0/: README.md  places-comparison-0.csv
eval/phoenix/datasets/places-eval-0/: places-eval-0.csv
eval/phoenix/judges/: correctness_judge.py  relevance_judge.py
eval/phoenix/prompts/: system_prompt_v01.txt
eval/results/: comparison_20260429_144714.json  eval_20260129_164743.json
src/places/: __main__.py  app.py  config.py  models.py  tools.py  utils.py
src/places/data/: places_year_measureid_lookup.csv
src/places/tools/: __init__.py  area_summary_stats.py  get_cdc_places_data.py
tests/: DENTAL_data_dict.csv  README.md  SLEEP_data_dict.csv  __init__.py  explore_api.py  places_data.csv  test_lookup_table.py  test_utils.py
