[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "places"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "requests>=2.32.4",
    "numpy>=2.0.0,<2.3.0",
    "pandas>=2.3.3",
    "fastmcp>=2.12.4",
    "starlette>=0.48.0",
    "pydantic==2.11.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
