[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "places"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
